Completed first part

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,77 @@
+
+
 * {
-  margin: 0;
-  padding: 0;
+/*  margin: 0;
+  padding: 0;*/
   box-sizing: border-box;
 }
+
+
+body {
+	background-color: #F5DFD8;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+h1 {
+	text-align: center;
+	font-size: 2.5vw;
+	font-family: cursive;
+	font-weight: bold;
+}
+
+
+h2, h3 {
+	font-family: cursive;
+}
+
+
+.main-container {
+	width: 95vw;
+	margin: 0 auto;
+	text-align: center;
+  font-weight: 200;
+	color: #F5DFD8;
+}
+
+
+.post-container {
+	display: inline-block;
+/*	align-items: center;
+  justify-content: center;*/
+  vertical-align: middle;
+	border-radius: 1%;
+	box-shadow: 5px 10px 15px #968985;
+	padding: 1% 3%;
+	font-size: 1.3vw;
+}
+
+.post-container p {
+	text-align: justify;
+/*	font-weight: lighter;*/
+}
+
+.big {
+	width: 40%;
+	background-color: #AF5671;
+}
+
+
+.small {
+	width: 25%;
+	background-color: #584867;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
